Upcoming
* File transfer
* Take photo and receive them via XMPP with front and back camera
* Screen shot feature (Rooted phones only)

2.4
* Application starts when a SMS containing "GTalkSMS" is received
* Client Offline Messages - GTalkSMS will try to send cached messages on reconnect
* Bug fixes
* New Xmpp library
* New blank icons for status bar

2.2
* Rejoin MUC rooms on XMPP reconnect or service restart
* Handle offline messages on servers that support XEP-13
* Bug fixes
* New status bar icons
* Status bar icons picker

2.1
* Alias command added
* Settings cleanup
* Bug fixes

2.0
* New Xmpp library
* Lot of bug fixes
* Admob banner added (Just click without follow the link)
* Current charge status in XMPP presence message
* Donate application version becomes a key
* GTalkSMS now backups and restores its configuration automatically 

1.9
* Ringmode command added
* OpenStreetMap added as location provider
* Buddies list displayed in main screen
* Show an icon if connection is secured
* Enhance xmpp connections
* Fix root access for shell commands
* New "chat" command
* New "delsms" command
* New Xmpp library
* Fix toast messages issue

1.8
* Xmpp lib updated
* New "findsms"/"fs" command
* XHTML formatting added
* Add consolas font for shell commands results
* Execute shell commands in new threads
* Enhance sent/delivered SMS notifications
* Option added to start/stop GTalkSMS according to Wifi state

1.7
* German language added
* Localization preference added
* GTalkSMS can manage SMS thread as conversation per contact 

1.6
* Add french language
* Add integration with Tasker
* Fix some bugs

1.5
* Add remote keyboard feature, with "write" command
* Autostart/stop GTalkSMS with charger connection
* Add "cmd" command to execute shell instructions

1.4
* MainService refactoring to avoid UI locks
* Avoid GPS location notification with the same value

1.3
* Add about panel with donors list & change logs
* Split preferences in three panels