@@ -2,6 +2,7 @@ Upcoming
 * File transfer
 * Take photo and receive them via XMPP with front and back camera
 * Screen shot feature (Rooted phones only)
+* Bluetooth command, enable/disable adapter, show status, ...
 
 2.4
 * Application starts when a SMS containing "GTalkSMS" is received
